# llm-accessibility-divide

./: .gitattributes  BERT_embedding_tsne_plot.py  CostComparison.py  GPT_scoring.py  Ineractionplots.py  Interactionplots.py  Llama2&3Generation.py  Llama2&3Scoring.py  Llama3.1Generation.py  Llama3.1Scoring.py  Olmo-2-13B-Generation.py  Olmo-2-13B-Scoring.py  QwenScoring.py  README.md  olmo.script  pyproject.toml  requirements.txt
Code/: MetricsCalculation.ipynb
Data/: ASAP.xlsx  Deepseek-R1_generated_data.xlsx  Deepseek-R1_graded_by_Olmo2_13B.csv  Essay_embeddings2.pt  FCE.xlsx  GPT3.5_generated_data.xlsx  GPT3.5_graded_by_Olmo2_13B.csv  GPT4_graded_by_Olmo2_13B.csv  GPT4o_generated_data.xlsx  GPT4o_graded_by_Olmo2_13B.csv  Llama2-70B_generated_data.xlsx  Llama2-70B_graded_by_Olmo2_13B.csv  Llama3-70B_generated_data.xlsx  Llama3-70B_graded_by_Olmo2_13B.csv  Llama3.1_generated_data.xlsx  Llama3.1_graded_by_Olmo2_13B.csv  Olmo2-13B_generatedResponse_data.xlsx  Olmo2-13B_generated_data.xlsx  Olmo2-13B_graded_by_Olmo2_13B.csv  Qwen2.5-72B_generated_data.xlsx  Qwen2.5-72B_graded_by_Olmo2_13B.csv  Summarizations.csv  llm_prompts.xlsx
Scripts/: BERT_embedding_tsne_plot.py  CostComparison.py  DeepSeekR1Generation.py  DeepSeekR1Scoring.py  GPT_scoring.py  Interactionplots.py  Llama2&3Generation.py  Llama2&3Scoring.py  Llama3.1Generation.py  Llama3.1Scoring.py  Olmo-2-13B-Scoring.py  Qwen2.5Generation.py  QwenScoring.py  UnifiedGeneration.py  UnifiedScoring.py
