[tool.poetry]
name = "llm-accessibility-divide"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
pyqt6 = "^6.7.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
openpyxl = "^3.1.5"
ollama = "^0.4.7"
llama-cpp-python = "^0.3.7"
huggingface-hub = "^0.28.1"
vllm = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
